# optimum

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: blank.md  bug_report.md  other.md
.github/workflows/: rust.yml
crates/optimum/: Cargo.toml
crates/optimum/src/: lib.rs
crates/optimum_components/: Cargo.toml
crates/optimum_components/src/: elite_set.rs  lib.rs
crates/optimum_core/: Cargo.toml
crates/optimum_core/src/: lib.rs  problem.rs  solver.rs  stop_criterion.rs
crates/optimum_core/src/problem/: evaluation.rs
crates/optimum_core/src/stop_criterion/: criterion_combiner.rs  improvement_criterion.rs  iter_criterion.rs  quality_criterion.rs  test_helpers.rs  time_criterion.rs
crates/optimum_metaheuristics/: Cargo.toml
crates/optimum_metaheuristics/src/genetic/: brkga.rs  decoder.rs  population.rs
examples/: knapsack.rs  tsp.rs
examples/knapsack/: Cargo.toml
examples/knapsack/src/: knapsack.rs  main.rs  neighborhood.rs  problem.rs
examples/knapsack/src/neighborhood/: random_flip.rs
examples/mdp/: .gitignore  Cargo.toml  README.md
examples/mdp/data/: matrizn100_m10.txt  matrizn500_m200.txt
examples/mdp/src/: cli.rs  lib.rs  main.rs  problem.rs
examples/mdp/src/problem/: decoders.rs
examples/mdp/src/problem/decoders/: current_decoder.rs  experimental_decoder.rs
examples/tsp/: Cargo.toml
examples/tsp/src/: genetic_decoder.rs  main.rs  neighborhood.rs  problem.rs  tsp.rs
examples/tsp/src/neighborhood/: two_opt.rs
examples/tsp/src/neighborhood/two_opt/: cartesian.rs  random_two_opt.rs
src/: analysis.rs  components.rs  core.rs  coverage.rs  elite_set.rs  lib.rs  metaheuristics.rs  percentage.rs  selection_control.rs  stop_criterion.rs
src/analysis/: batch.rs  battery.rs
src/analysis/batch/: statistics.rs
src/analysis/battery/: statistics.rs
src/components/: coverage.rs  elite_set.rs  percentage.rs  selection_control.rs
src/core/: neighborhood.rs  problem.rs  solver.rs  stop_criterion.rs
src/core/neighborhood/: explorers.rs
src/core/problem/: evaluation.rs
src/core/solver/: hook.rs
src/core/stop_criterion/: criterion_combiner.rs  improvement_criterion.rs  iter_criterion.rs  quality_criterion.rs  test_helpers.rs  time_criterion.rs
src/metaheuristics/: genetic.rs  neighborhood.rs
src/metaheuristics/genetic/: brkga.rs  decoder.rs  population.rs
src/metaheuristics/genetic/brkga/: decoder.rs  member_builder.rs  population.rs
src/metaheuristics/genetic/brkga/population/: member.rs
src/metaheuristics/genetic/population/: member.rs
src/metaheuristics/neighborhood/: explorers.rs  local_search.rs
src/stop_criterion/: iter_criterion.rs  time_criterion.rs
