[package]
name = "optimum"
version = "0.0.3"
edition = "2021"
description = "Future Framework to solve optimization problems"
license = "MIT"
repository = "https://github.com/dbofmmbt/optimum"
keywords = ["metaheuristics", "optimization"]
categories = ["algorithms", "science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
optimum_core = { path = "../optimum_core" }
optimum_components = { path = "../optimum_components" }
optimum_metaheuristics = { path = "../optimum_metaheuristics" }
